<resources>
    <string name="app_name">EMobi</string>
    <string name="welcome_to_emobi_app">Welcome to EMobi App</string>
    <string name="already_have_an_account">already have an account ?</string>
    <string name="need_a_new_account">need a new account ?</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="first_name_and_surname">First Name and Surname</string>
    <string name="account_password">Account Password</string>
    <string name="below_enter_you_personal_and_ban_info">Below Enter you Personal and Bank Info</string>
    <string name="personal_bank_account_number">Personal Bank Account Number</string>
    <string name="personal_id_passport_number">Personal ID/Passport Number</string>
    <string name="personal_phone_number">Personal Phone Number</string>
    <string name="create_account">create account</string>
    <string name="log_out">Log out</string>
    <string name="log_in_to_your_account">Log in to your Account</string>
    <string name="account_email">Account Email</string>
    <string name="sign_in">sign in</string>
    <string name="welcome_to_emobi">Welcome to EMobi</string>
    <string name="balance_enquiry">Balance Enquiry</string>
    <string name="mini_statement">mini-statement</string>
    <string name="compute_new_balance">Compute New Balance</string>
    <string name="compute">compute</string>
    <string name="transfer_funds">Transfer Funds</string>
    <string name="receiving_account_number">Receiving Account Number</string>
    <string name="send_funds">send funds</string>
    <string name="starting_account_balance">Starting Account Balance :</string>
</resources>
